--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,32 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  cupertino_icons: ^1.0.8
+  firebase_core: ^3.12.0
+  table_calendar: ^3.2.0
+  cloud_firestore: ^5.6.2
+  http: ^1.3.0
+  rxdart: ^0.28.0
+  dotted_decoration: ^2.0.0
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.10.0
+  intl: ^0.20.2
+  flutter_local_notifications_platform_interface: ^8.1.0-dev.1
+  flutter_local_notifications_windows: ^1.0.0-dev.3
+  shared_preferences: ^2.5.2
+  win_toast: ^0.3.1
+  system_tray: ^2.0.3
+  desktop_notifications: ^0.6.3
+  window_manager: ^0.4.3
+  screen_retriever: ^0.2.0
+  hive: ^2.2.3
+  path_provider: ^2.1.5
+  win32_registry: ^1.1.5
+  desktop_multi_window: ^0.2.1
+  win32: ^5.10.1
+  windows_notification: ^1.3.0
+  printing: ^5.14.2
+  pdf: ^3.11.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,9 +84,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/app_icon.ico
+    - assets/app_icon_alert.ico
+    - windows/runner/resources/app_icon.ico
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
