--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,4 +1,4 @@
-name: Flutter Build
+name: Flutter Build (macOS - Android/iOS/Windows)
 
 on:
   push:
@@ -8,22 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        platform: [android, ios, windows]
-        exclude:
-          - os: ubuntu-latest
-            platform: ios
-          - os: ubuntu-latest
-            platform: windows
-          - os: windows-latest
-            platform: ios
-          - os: windows-latest
-            platform: android
-          - os: macos-latest
-            platform: windows
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v4
@@ -35,17 +20,11 @@ jobs:
     - name: Install dependencies
       run: flutter pub get
 
-    - name: Build ${{ matrix.platform }}
-      run: |
-        if [ "${{ matrix.platform }}" = "android" ]; then
-          flutter build apk --release
-        elif [ "${{ matrix.platform }}" = "ios" ]; then
-          flutter build ios --release --no-codesign
-        elif [ "${{ matrix.platform }}" = "windows" ]; then
-          flutter build windows --release
-        fi
-      shell: bash
-      if: runner.os == 'Linux' || runner.os == 'macOS'
-    - name: Build Windows (on Windows runner)
+    - name: Build Android APK
+      run: flutter build apk --release
+
+    - name: Build iOS (no codesign)
+      run: flutter build ios --release --no-codesign
+
+    - name: Build Windows
       run: flutter build windows --release
-      if: matrix.os == 'windows-latest' && matrix.platform == 'windows'
